[gd_scene load_steps=21 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/pad.png" type="Texture" id=3]
[ext_resource path="res://player2.gd" type="Script" id=4]
[ext_resource path="res://right_wall.gd" type="Script" id=5]
[ext_resource path="res://left_wall.gd" type="Script" id=6]
[ext_resource path="res://bottom_wall.gd" type="Script" id=7]
[ext_resource path="res://main.gd" type="Script" id=8]
[ext_resource path="res://assets/font/MaldiniNormal-ZVKG3.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/font/MaldiniBold-OVZO6.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://CountDownManager.gd" type="Script" id=11]
[ext_resource path="res://score.gd" type="Script" id=12]
[ext_resource path="res://top_wall.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.7726, 4.05964 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 364 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 250.238, 10 )

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 90
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 180
font_data = ExtResource( 10 )

[node name="main" type="Node2D"]
script = ExtResource( 8 )

[node name="player" parent="." instance=ExtResource( 1 )]
speed = 150

[node name="player2" type="Area2D" parent="."]
position = Vector2( 240, 690 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
speed = 150

[node name="Sprite" type="Sprite" parent="player2"]
scale = Vector2( 1.31772, 0.406624 )
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="player2"]
shape = SubResource( 1 )

[node name="ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 243.566, 424.777 )

[node name="right_wall" type="Area2D" parent="."]
position = Vector2( 480, 360 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_wall"]
shape = SubResource( 2 )

[node name="left_wall" type="Area2D" parent="."]
position = Vector2( 0, 360 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_wall"]
shape = SubResource( 2 )

[node name="bottom_wall" type="Area2D" parent="."]
position = Vector2( 240, 760.977 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_wall"]
shape = SubResource( 3 )

[node name="top_wall" type="Area2D" parent="."]
position = Vector2( 240, -40 )
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_wall"]
shape = SubResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="HUD"]
visible = false
self_modulate = Color( 0.937255, 0.929412, 0.929412, 0.101961 )
anchor_left = 0.533
anchor_top = 0.166
anchor_right = 0.533
anchor_bottom = 0.166
margin_left = -240.84
margin_top = 68.48
margin_right = 214.16
margin_bottom = 550.48
custom_fonts/font = SubResource( 4 )
text = "0
0"
align = 1
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainText" type="Label" parent="HUD/message"]
anchor_left = 0.154
anchor_top = 0.291
anchor_right = 0.154
anchor_bottom = 0.291
margin_left = 69.7387
margin_top = 361.942
margin_right = 420.739
margin_bottom = 475.942
custom_fonts/font = SubResource( 5 )
text = "PRESS ENTER TO START..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PONG" type="Label" parent="HUD/message"]
margin_left = 15.6569
margin_top = 275.522
margin_right = 473.657
margin_bottom = 376.522
custom_fonts/font = SubResource( 7 )
text = "PONG"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDownManager" type="Node" parent="."]
script = ExtResource( 11 )

[node name="countDownMenuTimer" type="Timer" parent="CountDownManager"]

[node name="countDownMenu" type="Label" parent="CountDownManager"]
visible = false
margin_left = 2.0
margin_top = 262.0
margin_right = 477.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 6 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="runCountingDown" from="." to="CountDownManager" method="_on_main_runCountingDown"]
[connection signal="area_entered" from="player" to="player" method="_on_player_area_entered"]
[connection signal="area_entered" from="player2" to="player2" method="_on_player2_area_entered"]
[connection signal="area_entered" from="right_wall" to="right_wall" method="_on_right_wall_area_entered"]
[connection signal="area_entered" from="left_wall" to="left_wall" method="_on_right_wall_area_entered"]
[connection signal="PlayerScore" from="bottom_wall" to="." method="_on_bottom_wall_PlayerScore"]
[connection signal="area_entered" from="bottom_wall" to="bottom_wall" method="_on_bottom_wall_area_entered"]
[connection signal="PlayerScore" from="top_wall" to="." method="_on_top_wall_PlayerScore"]
[connection signal="area_entered" from="top_wall" to="top_wall" method="_on_top_wall_area_entered"]
[connection signal="endOfCountingDown" from="CountDownManager" to="." method="_on_CountDownManager_endOfCountingDown"]
[connection signal="timeout" from="CountDownManager/countDownMenuTimer" to="CountDownManager" method="_on_coutnDownMenuTimer_timeout"]
